[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Collisions/ColRight.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Collisions/ColLeft.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Mapa entero/Level 4.gd" type="Script" id=3]
[ext_resource path="res://src/Collisions/ColMidUpper.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/Sala 4/HabitacioCentral4.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Sala 4/HabitacionDerecha_4.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/Sala 4/habitacion_izquierda_4.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/actors/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Spawners/ChildSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/AssetsFinals/Sonido/BeepBox-Song_8_mp3cut.net.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/AssetsFinals/Levels/ModulDret.png" type="Texture" id=11]
[ext_resource path="res://assets/AssetsFinals/Levels/Exterior1.png" type="Texture" id=12]
[ext_resource path="res://src/scenes/Escalera 2/escalera_abajo_2.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/portals/portal.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/dialeg/MultiDialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/butons/butons.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/AssetsFinals/Props/pixil-frame-0_88.png" type="Texture" id=17]
[ext_resource path="res://assets/AssetsFinals/Props/cuadre 5.png" type="Texture" id=18]
[ext_resource path="res://assets/AssetsFinals/Props/cuadro 2.png" type="Texture" id=19]
[ext_resource path="res://assets/AssetsFinals/Props/pixil-frame-0_90.png" type="Texture" id=20]
[ext_resource path="res://assets/AssetsFinals/Props/pixil-frame-0_87.png" type="Texture" id=21]
[ext_resource path="res://src/PickUps/BarreraRoja.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/pcIluminat.tscn" type="PackedScene" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123.658, 86.114 )

[node name="Level 4" type="Node2D"]
position = Vector2( 0, -3456 )
script = ExtResource( 3 )
numberOfSpawns = 1
simpleDialogs = 1

[node name="Node2D" parent="." instance=ExtResource( 5 )]
z_index = -300

[node name="Terminal" parent="Node2D/TerminalCompleta" index="1"]
solution = "a"

[node name="Password" parent="Node2D/TerminalCompleta" index="2"]
margin_left = 199.223
margin_top = 286.917
margin_right = 199.223
margin_bottom = 286.917

[node name="Exterior" parent="." instance=ExtResource( 13 )]
position = Vector2( 2048, 0 )
z_index = -300

[node name="escaels" parent="Exterior" index="0"]
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="Right" parent="." instance=ExtResource( 6 )]
position = Vector2( 1024, 0 )
z_index = -300

[node name="Left" parent="." instance=ExtResource( 7 )]
position = Vector2( -1024, 0 )

[node name="ColLeft" parent="." instance=ExtResource( 2 )]

[node name="ColMid" parent="." instance=ExtResource( 4 )]

[node name="ColRight" parent="." instance=ExtResource( 1 )]

[node name="TerminalTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="Base" type="Node2D" parent="."]
position = Vector2( 828.488, 524.43 )

[node name="Enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( 828.488, 524.43 )

[node name="ModulDret" type="Sprite" parent="."]
position = Vector2( 1531.84, 286.298 )
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1922.55, 493.639 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1869.68, 214.191 )
scale = Vector2( 1.44, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2556.97, 239.367 )
scale = Vector2( 4.15184, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2556.97, 660.585 )
scale = Vector2( 4.15184, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3285.04, 465.349 )
scale = Vector2( 1.75183, 3.27633 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -909.527, 235.189 )
rotation = 0.732853
scale = Vector2( 1.75183, 3.27633 )
shape = SubResource( 1 )

[node name="Portal1" parent="." instance=ExtResource( 14 )]
position = Vector2( 1992.3, 344.475 )

[node name="finalTp" parent="Portal1" index="2"]
position = Vector2( 204.821, 98.2273 )

[node name="Portal2" parent="." instance=ExtResource( 14 )]
position = Vector2( 2102.32, 440.142 )
scale = Vector2( 1, 1.38476 )

[node name="finalTp" parent="Portal2" index="2"]
position = Vector2( -218.504, -67.5769 )

[node name="Dialogs" type="Node2D" parent="."]
position = Vector2( 2303.16, 415.782 )

[node name="Dialog1" parent="Dialogs" instance=ExtResource( 15 )]
visible = false
pregunta = "Do you know who is Karl Friedrich von Gaertner?"
ans1 = "No, botany of the 18th century disgusts me"
ans2 = "Yes, he is my great grandfather"
childResponse1 = "You don't know shit about life"
childResponse2 = "Really!!! We could be friends then c:"

[node name="Spawn1" parent="." instance=ExtResource( 9 )]
position = Vector2( 2557.74, 403.123 )

[node name="buttons" parent="." instance=ExtResource( 16 )]
position = Vector2( -505.185, 208.373 )
solucionText = "1714"

[node name="Props" type="Node2D" parent="."]
position = Vector2( 1383.14, 266.147 )
scale = Vector2( 4, 4 )

[node name="cuadre 6" type="Sprite" parent="Props"]
position = Vector2( -151.095, -10.1927 )
texture = ExtResource( 18 )

[node name="pixil-frame-0_88" type="Sprite" parent="Props"]
position = Vector2( 235.524, -64.6008 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 17 )

[node name="pixil-frame-0_90" type="Sprite" parent="Props"]
position = Vector2( -37.3561, -1.22577 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 20 )

[node name="cuadro 2" type="Sprite" parent="Props"]
texture = ExtResource( 19 )

[node name="cuadre 5" type="Sprite" parent="Props"]
position = Vector2( -331.941, -11.0897 )
texture = ExtResource( 18 )

[node name="pixil-frame-0_87" type="Sprite" parent="Props"]
position = Vector2( -499.189, 39.6572 )
rotation = -3.11485
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )

[node name="pixil-frame-0_89" type="Sprite" parent="Props"]
position = Vector2( -394.148, 38.8833 )
rotation = -3.45993
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )

[node name="pixil-frame-0_91" type="Sprite" parent="Props"]
position = Vector2( -453.536, 32.1128 )
rotation = -3.45993
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )

[node name="pixil-frame-0_92" type="Sprite" parent="Props"]
position = Vector2( -506.347, 10.4465 )
rotation = -3.35169
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )

[node name="interactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="BarreraRoja" parent="." instance=ExtResource( 22 )]
position = Vector2( 501.086, 234.112 )

[node name="ordenador" parent="." instance=ExtResource( 23 )]
position = Vector2( 454.089, 75.3745 )
[connection signal="enter_terminal" from="Node2D/TerminalCompleta" to="." method="_on_TerminalCompleta_enter_terminal"]
[connection signal="exit_terminal" from="Node2D/TerminalCompleta" to="." method="_on_TerminalCompleta_exit_terminal"]
[connection signal="solved" from="Node2D/TerminalCompleta/Terminal" to="." method="_on_Terminal_solved"]
[connection signal="timeout" from="TerminalTimer" to="." method="_on_TerminalTimer_timeout"]
[connection signal="teleportPlayer" from="Portal1" to="." method="_on_Portal1_teleportPlayer"]
[connection signal="teleportPlayer" from="Portal2" to="." method="_on_Portal2_teleportPlayer"]
[connection signal="answer" from="Dialogs/Dialog1" to="." method="_on_Dialog1_answer"]

[editable path="Node2D"]

[editable path="Node2D/TerminalCompleta"]

[editable path="Exterior"]

[editable path="Right"]

[editable path="Portal1"]

[editable path="Portal2"]
